--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
 </head>
-<body>
+<body id="capa">
 
     <header>
         <div class="navegacao">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Atividades</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="autoras.html">Autoras</a></li>
+                <li><a href="atividades.html">Atividades</a></li>
+                <li><a href="contato.html">Contato</a></li>
             </ul>
         </div>
     </header>
